add general html structure

--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 		<title>Sign-Up-Form</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<div class="banner"></div>
+		</header>
+		<main class="content">
+			<section class="header-paragraph-section"></section>
+			<section class="form-section"></section>
+			<section class="btn-section"></section>
+		</main>
+	</body>
 </html>
