--- a/index.html
+++ b/index.html
@@ -5,66 +5,69 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sign-Up-Form</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<header>
-			<div class="banner">
-				<img
-					src="resources/img/halie-west-25xggax4bSA-unsplash.jpg"
-					alt="green leafes"
-				/>
-				<div class="logo-container">
-					<img
-						src="resources/img/odin-lined.png"
-						alt="simplistic viking face"
-					/>
-					<p class="logo-caption">ODIN</p>
+		<div class="wrapper">
+			<header>
+				<div class="hero-banner">
+					<div class="logo-container">
+						<img
+							class="logo"
+							src="resources/img/odin-lined.png"
+							alt="simplistic viking face"
+						/>
+						<p class="logo-caption">ODIN</p>
+					</div>
+					<figcaption>
+						Photo by
+						<a
+							href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+							>Halie West</a
+						>
+						on
+						<a
+							href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+							>Unsplash</a
+						>
+					</figcaption>
 				</div>
-				<figcaption>
-					Photo by
-					<a
-						href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-						>Halie West</a
-					>
-					on
-					<a
-						href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-						>Unsplash</a
-					>
-				</figcaption>
-			</div>
-		</header>
-		<main class="content">
-			<section class="header-paragraph-section">
-				<p class="header-paragraph">
-					This is not a real online service! You know you need something like
-					this in your life to help you realize your deepest dreams. Sign up now
-					to get started.
-				</p>
-				<p>You know you want to.</p>
-			</section>
-			<section class="form-section">
-				<p class="form-header">Let's do this!</p>
-				<form method="post">
-					<label for="first-name">First Name</label>
-					<input type="text" name="first-name" id="first-name" />
-					<label for="last-name">Last Name</label>
-					<input type="text" name="last-name" id="last-name" />
-					<label for="email">Email</label>
-					<input type="email" name="email" id="email" />
-					<label for="tel">Phone Number</label>
-					<input type="tel" name="tel" id="tel" />
-					<label for="password">Password</label>
-					<input type="password" name="password" id="password" />
-					<label for="confirmation">Confirm Password</label>
-					<input type="password" name="confirm" id="confirm" />
-				</form>
-			</section>
-			<section class="btn-section">
-				<button>Create Account</button>
-				<p>Already have an account? <a href="#" class="log-in">Log in</a></p>
-			</section>
-		</main>
+			</header>
+			<main class="content">
+				<section class="header-paragraph-section">
+					<p class="header-paragraph">
+						This is not a real online service! You know you need something like
+						this in your life to help you realize your deepest dreams. Sign up
+						now to get started.
+					</p>
+					<p>You know you want to.</p>
+				</section>
+				<section class="form-section">
+					<p class="form-header">Let's do this!</p>
+					<form method="post">
+						<label for="first-name">First Name</label>
+						<input type="text" name="first-name" id="first-name" />
+						<label for="last-name">Last Name</label>
+						<input type="text" name="last-name" id="last-name" />
+						<label for="email">Email</label>
+						<input type="email" name="email" id="email" />
+						<label for="tel">Phone Number</label>
+						<input type="tel" name="tel" id="tel" />
+						<label for="password">Password</label>
+						<input type="password" name="password" id="password" />
+						<label for="confirmation">Confirm Password</label>
+						<input type="password" name="confirm" id="confirm" />
+					</form>
+				</section>
+				<section class="btn-section">
+					<button>Create Account</button>
+					<p>Already have an account? <a href="#" class="log-in">Log in</a></p>
+				</section>
+			</main>
+		</div>
 	</body>
 </html>
