--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="style.css" />
+		<script src="script.js" defer></script>
 	</head>
 	<body>
 		<div class="wrapper">
