remove pattern and javascript class

--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@
 							</div>
 							<div>
 								<label for="tel">Phone Number</label>
-								<input type="tel" name="tel" id="tel" required />
+								<input
+									type="tel"
+									name="tel"
+									id="tel"
+									pattern="[0-9]"
+									required
+								/>
 							</div>
 						</div>
 						<div class="flex">
